2010-05-19  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/DataServer.pm: XML data files coming from a disabled
	agent are now discarded.

	* util/pandora_manage.pl: Added CLI mode to disable/enable agents from	
	a given group. This will help admins to implement recurrent downtime periods.

2010-05-18  Sancho Lerena <slerena@artica.es>

	* pandora_server_upgrade: Fixed a check on pandora_db.pl script in cron.

	* lib/PandoraFMS/Config.pm: Version update to 3.1rc1 and build 100515

2010-05-17  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed the Warning Monitor
	status

2010-05-16  Raúl Mateos  <raulofpandora@gmail.com>

	* bin/pandora_server, lib/PandoraFMS/Config.pm, conf/pandora_server.conf,
	pandora_server_upgrade: Updated year. Clean code.

2010-05-13  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed some monitor
	status queries.

2010-05-12  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Make sure the agent exists
	  when searching by IP address. Fixes bug #2957130.

	* util/pandora_db.pl: Fixed bug #2957130.

2010-05-12  Sergio Martin <sergio.martin@artica.es>

	* man/man1/tentacle.1.gz: Deleted old man page

2010-05-12  Sergio Martin <sergio.martin@artica.es>

	* pandora_server_installer
	  man/man1/tentacle_server.1.gz: Improved the
	  manpages installation splitting tentacle man
	  page

	* man/man1/tentacle_server.1
	 man/man3: Old man pages removed


2010-05-12  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed unknown monitors
	query for bug: 3000460

2010-05-11  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed a log message in
	  pandora_process_module.

2010-05-11  Sergio Martin <sergio.martin@artica.es>

	* pandora_server_installer
	man/man1/pandora_server.1.gz
	man/man1/tentacle.1.gz: Added the man pages of
	tentacle and pandora server and modified the
	server installer script to install them
