@@ -21,6 +21,9 @@ use strict;
 use warnings;
 use POSIX qw(strftime);
 
+# Default lib dir for RPM and DEB packages
+use lib '/usr/lib/perl5';
+
 # Pandora Modules
 use PandoraFMS::DB;
 use PandoraFMS::Config;
