@@ -109,6 +109,9 @@ use HTML::Entities;
 use Time::Local;
 use POSIX qw(strftime);
 
+# Default lib dir for RPM and DEB packages
+use lib '/usr/lib/perl5';
+
 use PandoraFMS::DB;
 use PandoraFMS::Config;
 use PandoraFMS::Tools;
