@@ -28,6 +28,9 @@ use IO::Socket::INET;
 use Net::Ping;
 use POSIX qw(strftime);
 
+# Default lib dir for RPM and DEB packages
+use lib '/usr/lib/perl5';
+
 use PandoraFMS::Tools;
 use PandoraFMS::DB;
 use PandoraFMS::Core;
