@@ -23,6 +23,9 @@ use warnings;
 use threads;
 use threads::shared;
 
+# Default lib dir for RPM and DEB packages
+use lib '/usr/lib/perl5';
+
 use PandoraFMS::DB;
 use PandoraFMS::Core;
 
